objects/DMAPP__DM_Unit_Solution__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Block_Reason__c</fullName>
        <label>Block Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Competitor_Share__c</fullName>
        <label>Competitor Wallet Value</label>
        <summarizedField>DMAPP__Unit_Solution_Competitor__c.DMAPP__Wallet_Value__c</summarizedField>
        <summaryForeignKey>DMAPP__Unit_Solution_Competitor__c.DMAPP__Unit_Solution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Other_Note__c</fullName>
        <label>Other Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Other_Share__c</fullName>
        <formula>IF(ISNULL(DMAPP__Wallet_Size__c ), 
        NULL,  
        IF(DMAPP__Wallet_Size__c == 0, 0, DMAPP__Other_Wallet_Size__c /  DMAPP__Wallet_Size__c))</formula>
        <label>Other Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Other_Wallet_Size__c</fullName>
        <formula>IF(ISNULL(DMAPP__Wallet_Size__c ), NULL, DMAPP__Wallet_Size__c -   IF( ISNULL(DMAPP__Competitor_Share__c) , 0, DMAPP__Competitor_Share__c) -   IF( ISNULL(DMAPP__Our_Wallet_Value__c) , 0, DMAPP__Our_Wallet_Value__c) )</formula>
        <label>Other Wallet Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Wallet_Quantity__c</fullName>
        <label>Our Wallet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Wallet_Share__c</fullName>
        <formula>IF(ISNULL(DMAPP__Wallet_Size__c ), NULL, IF(DMAPP__Wallet_Size__c == 0, 0, DMAPP__Our_Wallet_Value__c /  DMAPP__Wallet_Size__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Our Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Wallet_Value__c</fullName>
        <label>Our Wallet Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Solution__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Solution</label>
        <referenceTo>DMAPP__AM_Plan_Solution__c</referenceTo>
        <relationshipLabel>Unit Solutions</relationshipLabel>
        <relationshipName>Unit_Solutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Unit Solutions</relationshipLabel>
        <relationshipName>Unit_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Wallet_Quantity__c</fullName>
        <label>Wallet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Wallet_Size__c</fullName>
        <label>Wallet Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Unit Solution</label>
    <nameField>
        <label>Unit Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__WalletSize</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Wallet_Size__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Wallet_Size__c</errorDisplayField>
        <errorMessage>Wallet Size must be greater or equal to 0.</errorMessage>
    </validationRules>
</CustomObject>